package EjerciciosClase.Oca;

public class CasillaAvance {
}
