package EjerciciosClase.Oca;

public class CasillaPenalizada {
}
